# zsh-to

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  reach.plugin.zsh  to.plugin.zsh
.github/workflows/: ci.yml
Formula/: reach.rb  to.rb
completions/: _gt  _to
docs/: ARCHITECTURE.md
scripts/: benchmark.zsh  check.zsh  install.sh
src/: ignore_rules.rs  main.rs  store.rs  traverse.rs  watcher.rs
tests/: run.zsh
