[package]
name = "reach-helper"
version = "1.6.0"
edition = "2021"
license = "MIT"
description = "SQLite helper for the reach directory jumper"

[[bin]]
name = "reach-helper"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
ignore = "0.4"
notify = "6"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
